--- a/scripts/configs.json
+++ b/scripts/configs.json
@@ -29,7 +29,7 @@
     "local":["lf"],
     "target":"pr"
   },
-  "models":{
+  "experiments":{
     "pod":{
       "bins":{"min":-0.6,"max":0.1,"width":0.001,"minsample":50},
       "fit":{"prmin":1.0,"prmax":5.0},
