--- a/scripts/configs.json
+++ b/scripts/configs.json
@@ -25,8 +25,8 @@
     "testyears":[2018,2020]
   },
   "variables":{
-    "field":["bl","cape","subsat","thetaeprime","thetaeplus","t","q"],
-    "local":["lf"],
+    "field":["bl","cape","subsat","rh","thetae","thetaestar"],
+    "local":["lf","lhf","shf"],
     "target":"pr"
   },
   "experiments":{
@@ -35,54 +35,32 @@
       "fit":{"prmin":1.0,"prmax":5.0},
       "landthresh":0.5,
       "runs":{
-        "pod_single_fit":{"withlf":false},
-        "pod_land_ocean_fit":{"withlf":true}
+        "pod_bl":{"withlf":false},
+        "pod_bl_lf":{"withlf":true}
       }
     },
     "nn":{
       "projectname":"Chapter-3-Experiments",
-      "seeds":[42,72,102],
+      "seeds":[42],
       "workers":8,
       "epochs":20,
-      "batchsize":500,
+      "batchsize":2000,
       "learningrate":0.0005,
       "patience":4,
       "criterion":"MSELoss",
       "runs":{
-        "baseline_experiment_1":{"kind":"baseline","fieldvars":["bl"]},
-        "baseline_experiment_2":{"kind":"baseline","fieldvars":["cape","subsat"]},
-        "baseline_experiment_3":{"kind":"baseline","fieldvars":["thetaeprime"]},
-        "baseline_experiment_4":{"kind":"baseline","fieldvars":["thetaeplus"]},
-        "baseline_experiment_5":{"kind":"baseline","fieldvars":["thetaeprime","thetaeplus"]},
-        "baseline_experiment_6":{"kind":"baseline","fieldvars":["t","q"]},
-        "nonparametric_experiment_1":{"kind":"nonparametric","fieldvars":["bl"]},
-        "nonparametric_experiment_2":{"kind":"nonparametric","fieldvars":["cape","subsat"]},
-        "nonparametric_experiment_3":{"kind":"nonparametric","fieldvars":["thetaeprime"]},
-        "nonparametric_experiment_4":{"kind":"nonparametric","fieldvars":["thetaeplus"]},
-        "nonparametric_experiment_5":{"kind":"nonparametric","fieldvars":["thetaeprime","thetaeplus"]},
-        "nonparametric_experiment_6":{"kind":"nonparametric","fieldvars":["t","q"]},
-        "gaussian_experiment_1":{"kind":"parametric","fieldvars":["bl"],"kernel":"gaussian"},
-        "gaussian_experiment_2":{"kind":"parametric","fieldvars":["cape","subsat"],"kernel":"gaussian"},
-        "gaussian_experiment_3":{"kind":"parametric","fieldvars":["thetaeprime"],"kernel":"gaussian"},
-        "gaussian_experiment_4":{"kind":"parametric","fieldvars":["thetaeplus"],"kernel":"gaussian"},
-        "gaussian_experiment_5":{"kind":"parametric","fieldvars":["thetaeprime","thetaeplus"],"kernel":"gaussian"},
-        "gaussian_experiment_6":{"kind":"parametric","fieldvars":["t","q"],"kernel":"gaussian"}
+        "baseline_bl_lf":{"kind":"baseline","fieldvars":["bl"],"localvars":["lf"]},
+        "baseline_cape_subsat_lf":{"kind":"baseline","fieldvars":["cape","subsat"],"localvars":["lf"]},
+        "baseline_rh_thetae_thetaestar_lf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf"]},
+        "baseline_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","hf","shf"]},
+        "nonparametric_bl_lf":{"kind":"nonparametric","fieldvars":["bl"],"localvars":["lf"]},
+        "gaussian_bl_lf":{"kind":"parametric","fieldvars":["bl"],"localvars":["lf"],"kernel":"gaussian"}
       }
     },
     "sr":{
       "runs":{
-        "sr_nonparametric_experiment_1":{"fieldvars":["bl"],"features_from":"nonparametric_experiment_1"},
-        "sr_nonparametric_experiment_2":{"fieldvars":["cape","subsat"],"features_from":"nonparametric_experiment_2"},
-        "sr_nonparametric_experiment_3":{"fieldvars":["thetaeprime"],"features_from":"nonparametric_experiment_3"},
-        "sr_nonparametric_experiment_4":{"fieldvars":["thetaeplus"],"features_from":"nonparametric_experiment_4"},
-        "sr_nonparametric_experiment_5":{"fieldvars":["thetaeprime","thetaeplus"],"features_from":"nonparametric_experiment_5"},
-        "sr_nonparametric_experiment_6":{"fieldvars":["t","q"],"features_from":"nonparametric_experiment_6"},
-        "sr_gaussian_experiment_1":{"fieldvars":["bl"],"features_from":"gaussian_experiment_1"},
-        "sr_gaussian_experiment_2":{"fieldvars":["cape","subsat"],"features_from":"gaussian_experiment_2"},
-        "sr_gaussian_experiment_3":{"fieldvars":["thetaeprime"],"features_from":"gaussian_experiment_3"},
-        "sr_gaussian_experiment_4":{"fieldvars":["thetaeplus"],"features_from":"gaussian_experiment_4"},
-        "sr_gaussian_experiment_5":{"fieldvars":["thetaeprime","thetaeplus"],"features_from":"gaussian_experiment_5"},
-        "sr_gaussian_experiment_6":{"fieldvars":["t","q"],"features_from":"gaussian_experiment_6"}
+        "sr_nonparametric_bl_lf":{"fieldvars":["bl"],"localvars":["lf"],"features_from":"nonparametric_bl_lf"},
+        "sr_gaussian_bl_lf":{"fieldvars":["bl"],"localvars":["lf"],"features_from":"gaussian_bl_lf"}
       }
     }
   }
