--- a/scripts/configs.json
+++ b/scripts/configs.json
@@ -58,6 +58,7 @@
         "clamp_wmse_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"WeightedMSELoss"},
         "clamp_logcosh_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"LogCoshLoss"},
         "clamp_dice_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"]},
+        "clamp_q75_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"QuantileLoss","criterionkwargs":{"q":0.75}},
         "nonparametric_bl_lf":{"kind":"nonparametric","fieldvars":["bl"],"localvars":["lf"]},
         "gaussian_bl_lf":{"kind":"parametric","fieldvars":["bl"],"localvars":["lf"],"kernel":"gaussian"}
       }
