--- a/scripts/configs.json
+++ b/scripts/configs.json
@@ -47,20 +47,14 @@
       "batchsize":2000,
       "learningrate":0.0005,
       "patience":4,
-      "criterion":"DiceLoss",
+      "criterion":"MSELoss",
       "runs":{
-        "baseline_bl":{"kind":"baseline","fieldvars":["bl"]},
-        "baseline_bl_lf":{"kind":"baseline","fieldvars":["bl"],"localvars":["lf"]},
-        "baseline_cape_subsat_lf":{"kind":"baseline","fieldvars":["cape","subsat"],"localvars":["lf"]},
-        "baseline_rh_thetae_thetaestar_lf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf"]},
-        "baseline_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"]},
-        "clamp_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"]},
-        "clamp_wmse_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"WeightedMSELoss"},
-        "clamp_logcosh_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"LogCoshLoss"},
-        "clamp_dice_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"]},
-        "clamp_q75_rh_thetae_thetaestar_lf_lhf_shf":{"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"QuantileLoss","criterionkwargs":{"q":0.75}},
-        "nonparametric_bl_lf":{"kind":"nonparametric","fieldvars":["bl"],"localvars":["lf"]},
-        "gaussian_bl_lf":{"kind":"parametric","fieldvars":["bl"],"localvars":["lf"],"kernel":"gaussian"}
+        "mse_rh_thetae_thetaestar_lf_lhf_shf":
+          {"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"MSELoss"},
+        "logcosh_rh_thetae_thetaestar_lf_lhf_shf":
+          {"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"LogCoshLoss"},
+        "q75_rh_thetae_thetaestar_lf_lhf_shf":
+          {"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"QuantileLoss"}
       }
     },
     "sr":{
