Running models with different distributions

--- a/scripts/configs.json
+++ b/scripts/configs.json
@@ -54,6 +54,8 @@
         "logcosh_rh_thetae_thetaestar_lf_lhf_shf":
           {"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"LogCoshLoss"},
         "q75_rh_thetae_thetaestar_lf_lhf_shf":
+          {"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"QuantileLoss"},
+        "q50_rh_thetae_thetaestar_lf_lhf_shf":
           {"kind":"baseline","fieldvars":["rh","thetae","thetaestar"],"localvars":["lf","lhf","shf"],"criterion":"QuantileLoss"}
       }
     },
